fix:26.02.2024 14:06 methods deleteAnswer and getAllAnswers were changed.